switched from hacky way of fixing overspill to a nice way

--- a/src/assets/sass/common/mixins/_common.sass
+++ b/src/assets/sass/common/mixins/_common.sass
@@ -44,7 +44,8 @@
 
 =osg-common-card
   position: relative
-  border: 1px solid transparent // Hack to make the content not spill over because of negative margins
+  display: flex
+  flex-direction: column
   a
     text-decoration: none
   figure
